add dummy buttons

--- a/client/index.html
+++ b/client/index.html
@@ -73,7 +73,10 @@
       <div class="jumbotron">
         <div class="container" align="center" id='pile'>
           <!-- Game area. -->
-          <button id="btnStartGame" type="button" class="btn btn-primary mr-2 mb-2">Start Game</button>
+          <h2>Game Menu</h2>
+          <button id="btnStartGame" type="button" class="btn btn-primary mr-2 mb-2">Singleplayer</button><br>
+          <button id="btnMulti" type="button" class="btn btn-primary mr-2 mb-2">&nbsp;Multiplayer&nbsp;</button><br>
+          <button id="btnSpectate" type="button" class="btn btn-primary mr-2 mb-2">&nbsp; Spectator &nbsp;</button>
 
         </div>
       </div>
